--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,58 @@
-sudo: required
+os: linux
+dist: focal
+group: edge
+language: generic
+git:
+  depth: 1
+addons:
+  apt:
+    packages:
+      - aria2
+      - zstd
+      - xz-utils
 services:
   - docker
 before_install:
+  #- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin 2>/dev/null
   - docker pull fr3akyphantom/droid-builder:latest
 before_script:
-- cd $HOME && mkdir twrp
-- wget -q https://github.com/PhantomZone54/twrp_sources_norepo/releases/download/v3.5.0_9-20210130/MinimalOmniRecovery-twrp-5.1-norepo-20210130.tzst -O $HOME/twrp.tzst
-- tar -I zstd -xvf twrp.tzst --directory $HOME/twrp/ && rm twrp.tzst
+  - cd $HOME && mkdir twrp
+  - TWRP_SOURCE="https://github.com/PhantomZone54/twrp_sources_norepo/releases/download/v3.4.0-20201103/MinimalOmniRecovery-twrp-5.1-norepo-20201103.tzst"
+  - aria2c -x16 -s8 --console-log-level=error --summary-interval=0 "${TWRP_SOURCE}" -o twrp.tzst || wget -q --show-progress --progress=bar:force "${TWRP_SOURCE}" -O twrp.tzst
+  - tar --zstd -xf twrp.tzst --directory $HOME/twrp/ && rm twrp.tzst
 script:
-  - cd $HOME/twrp/ && https://github.com/BoonVed/acer-b3a20.git device/Acer/B3-A20
-  - git clone https://github.com/TwrpBuilder/android_device_generic_twrpbuilder.git device/generic/twrpbuilder
-  - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery.git bootable/recovery
+  - cd $HOME/twrp/ && git clone https://github.com/BoonVed/acer-b3a20.git.git device/Acer/B3-A20
+  - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery -b android-9.0 --depth 1 bootable/recovery
   - |
-    docker run --rm -i -v "$(pwd):/root/twrp/:rw,z" r3akyphantom/droid-builder bash << EOF
-
-    cd /root/twrp/
-    source build/envsetup.sh && lunch omni_B3-A20-eng && make -j16 recoveryimage
+    docker run --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$(pwd):/home/builder/twrp/:rw,z" -v "${HOME}/.ccache:/srv/ccache:rw,z" fr3akyphantom/droid-builder bash << EOF
+    cd /home/builder/twrp/
+    source build/envsetup.sh
+    # Choose build flavor as "eng" or "userdebug"
+    BUILD_FLAVOR="eng"
+    lunch omni_B3-A20-${BUILD_FLAVOR}
+    make -j$(nproc --all) recoveryimage
     exit
     EOF
 after_success:
   - export version=$(cat bootable/recovery/variables.h | grep "define TW_MAIN_VERSION_STR" | cut -d '"' -f2)
-  - cp $HOME/twrp/out/target/product/X100V6/recovery.img $HOME/twrp/TWRP-$version-X100V6-$(date +"%Y%m%d").img
-
+  - cp $HOME/twrp/out/target/product/B3-A20/recovery.img $HOME/twrp/TWRP-$version-B3-A20-$(date +"%Y%m%d")-Unofficial.img
+  - cd $HOME/twrp/
+  # Optional: You might need to switch from https://transfer.sh to https://file.io
+  # - curl -s --upload-file TWRP-$version-${CODENAME_}-$(date +"%Y%m%d")-Unofficial.img https://transfer.sh/ && echo ""
 deploy:
-  skip_cleanup: true
   provider: releases
-  api_key: "$GIT_OAUTH_TOKEN_TB"
+  # The secret api_key will be loaded from the environment variables
+  token: $GitOAUTHToken
+  cleanup: false
   file_glob: true
   file: $HOME/twrp/*.img
   on:
-    tags: false
-    repo: BoonVed/acer-b3a20
-    branch: master
-
+    tags: false # Set "true" to deploy only on successful tagged commit builds
+    repo: BoonVed/acer-b3a20.git # Optional: If you want to deploy on different repository
+    branch: master # Optional: Needs to be exact as the config branch
 branches:
+  only:
+    - master # Set travis builder branch(es) names
   except:
     - /^(?i:untagged)-.*$/
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/_
